--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,18 @@
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
+	<groupId>org.hibernate</groupId>
+	<artifactId>hibernate-core</artifactId>
+	<version>4.3.0.Final</version>
+    <scope>provided</scope>
+  </dependency>
+    
+    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-entitymanager</artifactId>
-     <version>4.3.5.Final</version>
-	</dependency>
+     <version>4.3.0.Final</version>
+     <scope>provided</scope>
+    </dependency>
     <dependency>  
      <groupId>org.primefaces</groupId>  
      <artifactId>primefaces</artifactId>  
@@ -28,8 +36,48 @@
     	<groupId>mysql</groupId>
     	<artifactId>mysql-connector-java</artifactId>
     	<version>5.1.17</version>
+    </dependency>
+    <dependency>
+   <groupId>org.springframework</groupId>
+   <artifactId>spring-core</artifactId>
+   <version>4.0.3.RELEASE</version>
   </dependency>
-    
+  <dependency>
+   <groupId>org.springframework</groupId>
+   <artifactId>spring-context</artifactId>
+   <version>4.0.3.RELEASE</version>
+  </dependency>
+  <dependency>
+   <groupId>org.springframework</groupId>
+   <artifactId>spring-web</artifactId>
+   <version>4.0.3.RELEASE</version>
+  </dependency>
+  <dependency>
+   <groupId>org.springframework</groupId>
+   <artifactId>spring-tx</artifactId>
+   <version>4.0.3.RELEASE</version>
+  </dependency>
+  <dependency>
+   <groupId>org.springframework</groupId>
+   <artifactId>spring-orm</artifactId>
+   <version>4.0.3.RELEASE</version>
+  </dependency>
+  <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.0.3.RELEASE</version>
+        </dependency>
+   <dependency> <!-- before Spring 3.2.x -->
+         <groupId>cglib</groupId>
+         <artifactId>cglib-nodep</artifactId>
+         <version>2.2.2</version>
+         <scope>runtime</scope>
+      </dependency>
+    <dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>16.0.1</version>
+		</dependency>
     <dependency>
     	<groupId>javax.faces</groupId>
     	<artifactId>javax.faces-api</artifactId>
@@ -41,6 +89,16 @@
     	<artifactId>javaee-api</artifactId>
     	<version>7.0</version>
     	<scope>provided</scope>
+    </dependency>
+    <dependency>
+    	<groupId>javassist</groupId>
+    	<artifactId>javassist</artifactId>
+    	<version>3.12.1.GA</version>
+    </dependency>
+    <dependency>
+    	<groupId>c3p0</groupId>
+    	<artifactId>c3p0</artifactId>
+    	<version>0.9.1.2</version>
     </dependency>
   </dependencies>
   <build>
