--- a/.classpath
+++ b/.classpath
@@ -32,5 +32,9 @@
 	<classpathentry kind="lib" path="C:/wildfly-8.0.0.Final/modules/system/layers/base/javax/annotation/api/main/jboss-annotations-api_1.2_spec-1.0.0.Final.jar"/>
 	<classpathentry kind="lib" path="C:/wildfly-8.0.0.Final/modules/system/layers/base/javax/ejb/api/main/jboss-ejb-api_3.2_spec-1.0.0.Final.jar"/>
 	<classpathentry kind="lib" path="C:/wildfly-8.0.0.Final/jboss-modules.jar"/>
+	<classpathentry kind="lib" path="C:/wildfly-8.0.0.Final/modules/system/layers/base/org/hibernate/4.3.5/jpa/hibernate-entitymanager-4.3.5.Final.jar"/>
+	<classpathentry kind="con" path="org.jboss.ide.eclipse.as.classpath.core.ejb3.classpathContainer/WildFly 8.0 Runtime Server"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.0-RC5/apache-tomcat-8.0.0-RC5/lib/tomcat-jdbc.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-6.0.37-windows-x64/apache-tomcat-6.0.37/lib/tomcat-dbcp.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
